--- a/.github/workflows/deploy-nestjs-vercel-cloudflare.yml
+++ b/.github/workflows/deploy-nestjs-vercel-cloudflare.yml
@@ -160,3 +160,16 @@ jobs:
           echo "Updating DNS Record for $DOMAIN_NAME..."
           curl -X $METHOD "$URL" -H "Authorization: Bearer $CF_TOKEN" \
             -H "Content-Type: application/json" -d "$DNS_PAYLOAD"
+
+      - name: Sync Vercel Settings
+        run: |
+          V_CMD="npx vercel --token=${{ secrets.VERCEL_TOKEN }}"
+          $V_CMD domains add ${{ steps.meta.outputs.full_domain }} --force || true
+           
+          declare -A ENVS=( 
+            ["NAME_SERVICE"]="${{ github.repository }}" 
+          )
+           
+          for key in "${!ENVS[@]}"; do
+            printf "${ENVS[$key]}" | $V_CMD env add $key production --force || true
+          done
