--- a/.github/workflows/deploy-nestjs-vercel-cloudflare.yml
+++ b/.github/workflows/deploy-nestjs-vercel-cloudflare.yml
@@ -127,6 +127,31 @@ jobs:
           echo "full_domain=${REPO_NAME_LOW}.${{ secrets.DOMAIN }}" >> $GITHUB_OUTPUT
           echo "subdomain=${REPO_NAME_LOW}" >> $GITHUB_OUTPUT
 
+      - name: Sync Vercel Settings
+        env:
+          ALL_SECRETS: ${{ toJson(secrets) }}
+        run: |
+          V_CMD="npx vercel --token=${{ secrets.VERCEL_TOKEN }}"
+
+          $V_CMD pull --yes --environment=production 
+
+          # Add Domain
+          $V_CMD domains add ${{ steps.meta.outputs.full_domain }} --force || true
+            
+          declare -A ENVS=( 
+            ["NAME_SERVICE"]="${{ github.event.repository.name }}" 
+          )
+
+          for key in "${!ENVS[@]}"; do
+            printf "%s" "${ENVS[$key]}" | $V_CMD env add "$key" production --force || true
+          done
+
+          echo "$ALL_SECRETS" | jq -r 'to_entries[] | .key + " " + .value' | while read -r key value; do
+            if [ "$key" != "VERCEL_TOKEN" ]; then
+              printf "%s" "$value" | $V_CMD env add "$key" production --force || true
+            fi
+          done
+
       - name: Deploy to Vercel
         id: vercel_deploy
         run: |
@@ -142,7 +167,6 @@ jobs:
         run: |
           DOMAIN_NAME="${{ steps.meta.outputs.full_domain }}"
 
-          # Get Record ID
           RECORD_ID=$(curl -s -X GET "https://api.cloudflare.com/client/v4/zones/$ZONE_ID/dns_records?name=$DOMAIN_NAME" \
             -H "Authorization: Bearer $CF_TOKEN" | jq -r '.result[0].id // empty')
 
@@ -160,24 +184,3 @@ jobs:
           echo "Updating DNS Record for $DOMAIN_NAME..."
           curl -X $METHOD "$URL" -H "Authorization: Bearer $CF_TOKEN" \
             -H "Content-Type: application/json" -d "$DNS_PAYLOAD"
-
-      - name: Sync Vercel Settings
-        env:
-          ALL_SECRETS: ${{ toJson(secrets) }}
-        run: |
-          V_CMD="npx vercel --token=${{ secrets.VERCEL_TOKEN }}"
-          $V_CMD domains add ${{ steps.meta.outputs.full_domain }} --force || true
-           
-          declare -A ENVS=( 
-            ["NAME_SERVICE"]="${{ github.repository }}" 
-          )
-
-          for key in "${!ENVS[@]}"; do
-            printf "%s" "${ENVS[$key]}" | $V_CMD env add "$key" production --force || true
-          done
-
-          echo "$ALL_SECRETS" | jq -r 'to_entries[] | .key + " " + .value' | while read -r key value; do
-            if [ "$key" != "VERCEL_TOKEN" ]; then
-              printf "%s" "$value" | $V_CMD env add "$key" production --force || true
-            fi
-          done
